--- a/index.html
+++ b/index.html
@@ -7,32 +7,19 @@
 </head>
 <body>
 	<div id="heading">
-		<h1>bEST News</h1>
-		<h2>Get News. Anytime. Anywhere.</h2>
-		<h2>(As long as you have internet connection)</h2>
-		<a href="#newspart">To the News</a>
-	</div>
-	<div id="newspart">
-		<h3>The Latest News</h3>
-		<form id="filters">
-			<b>b</b>
-			<input type="checkbox" id="entertainmentbox" name="entertainmentbox" value = "entertainmentbox" onclick="otheronclick(this.id);">
-			<label for="entertainmentbox"><b>E</b>ntertainment&nbsp</label>
-			<input type="checkbox" id="sportsbox" name="sportsbox" value = "sportsbox" onclick="otheronclick(this.id);">
-			<label for="sportsbox"><b>S</b>ports&nbsp</label>
-			<input type="checkbox" id="technologybox" name="technologybox" value = "technologybox" onclick="otheronclick(this.id);">
-			<label for="technologybox"><b>T</b>echnology&nbsp</label>
+		<div class="topnav">
+			<a href="index.html" class="active">Home</a>
+			<a href="top.html">Top Headlines</a>
+			<a href="search.html">Advanced Search</a>
+			<a href="about.html">About</a>
 			
-			<input type="checkbox" id="allbox" name="allbox" value = "allbox" onclick="allonclick();">
-			<label for="allbox">All</label><br>
-
-		</form>
-
-		<button onclick="refresh();">Refresh</button>
-
-		<div id="news section"></div>
+		</div>
+		<div id="banner">
+			<h1>bEST News</h1>
+			<h2>Get News. Anytime. Anywhere.</h2>
+			<h2>(As long as you have internet connection)</h2>
+			<a href="top.html">View Top Headlines</a> <a href="search.html">Advanced Search</a>
+		</div>
 	</div>
-
-	<script src="js/script.js"> </script>
 </body>
 </html>
