--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 	<div id="heading">
 		<div class="topnav">
 			<a href="index.html" class="active">Home</a>
-			<a href="top.html">Top Headlines</a>
+			<!--<a href="top.html">Top Headlines</a>-->
 			<a href="search.html">Advanced Search</a>
 			<a href="about.html">About</a>
 			
 		</div>
 		<div id="banner">
 			<h1>bEST News</h1>
-			<h2>Get News. Anytime. Anywhere.</h2>
+			<h2><b>B</b>rowse <b>E</b>ntertainment, <b>S</b>ports, and <b>T</b>echnology News.</h2>
+			<h2>Anytime. Anywhere.</h2>
 			<h2>(As long as you have internet connection)</h2>
-			<a href="top.html">View Top Headlines</a> <a href="search.html">Advanced Search</a>
+			<!--<a href="top.html">View Top Headlines</a>--> <a href="search.html">Advanced Search</a>
 		</div>
 	</div>
 </body>
