style changes and edit search parameters

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Top Headlines</title>
-	<link rel="stylesheet" href="topstyle.css">
+	<link rel="stylesheet" href="aboutstyle.css">
 </head>
 <body>
 	<div id="heading">
@@ -20,17 +20,17 @@
         </div>
     </div>
     <div id="abouttext">
-        <h2>Top Headlines</h2>
-        <p>Designed to allow you to browse the top headlines from around the world. You can filter by Entertainment, Sports, or Technology. Checking the all box signifies that news articles of any of those three categories will be shown</p>
-    
         <h2>Advanced Search</h2>
         <p>Designed to allow you to search for specific news articles. You can make your search more specific articles using the following parameters:
             <ul>
                 <li>Keywords: Will narrow down the search to articles that contain the keywords in the title or article.</li>
-                <li>Topic: You can select all topics, Entertainment, Sports, or Technology. Selecting all topics will return articles of any topic, not just Entertainment, Sports, and Technology</li>
-                <li>Language: Filter articles that are in the language. Will return articles of all languages by default</li>
-                <li>Sort By: Select how you want the articles to be sorted. By default, articles will be sorted by how close they are to the keywords</li>
+                <li>Topic: You can select all topics, Entertainment, Sports, or Technology. Selecting all topics will return articles in any of the Entertainment, Sports, and Technology categories</li>
+                <li>Country: Filter articles from a certain country. Will return articles of all countries by default. Countries are listed in alphabetical order with the exception of the United States, which is listed first (because this website is based in the United States).</li>
+                <li>Sort By: Select how you want the articles to be sorted. By default, articles will be sorted by how close they are to the keywords</li></li>
             </ul>
+        </p>
+        <p>
+            20 articles will be shown at a time. You can click the title of the article in order to open the article in a new tab. To view more articles, you can click the "View More" button if there are more articles remaining.
         </p>
     </div>
 	
