--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>bEST News</title>
+	<title>BEST News</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
 			
 		</div>
 		<div id="banner">
-			<h1>bEST News</h1>
+			<h1>BEST News</h1>
 			<h2><b>B</b>rowse <b>E</b>ntertainment, <b>S</b>ports, and <b>T</b>echnology News.</h2>
 			<h2>Anytime. Anywhere.</h2>
 			<h2>(As long as you have internet connection)</h2>
