minor changes and deploy

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             </ul>
         </p>
         <p>
-            20 articles will be shown at a time. You can click the title of the article in order to open the article in a new tab. To view more articles, you can click the "View More" button if there are more articles remaining.
+            20 articles will be shown at a time. You can click the title of the article in order to open the article in a new tab. If there are more articles remaining, you can click the "View More" button to view more articles.
         </p>
     </div>
 	
