--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<h2><b>B</b>rowse <b>E</b>ntertainment, <b>S</b>ports, and <b>T</b>echnology News.</h2>
 			<h2>Anytime. Anywhere.</h2>
 			<h2>(As long as you have internet connection)</h2>
-			<!--<a href="top.html">View Top Headlines</a>--> <a href="search.html">Advanced Search</a>
+			<!--<a href="top.html">View Top Headlines</a>--> <a href="search.html" id="searchbutton">Browse The News</a>
 		</div>
 	</div>
 </body>
