--- a/about.html
+++ b/about.html
@@ -20,13 +20,13 @@
         </div>
     </div>
     <div id="abouttext">
-        <h2>Advanced Search</h2>
-        <p>Designed to allow you to search for specific news articles. You can make your search more specific articles using the following parameters:
+        <p>Developed using <a href="https://newsapi.org/">NewsAPI</a> for the Capital One Summit Program.</p>
+        <p>Designed to allow you to search for specific news articles. You can make your search more specific using the following parameters:
             <ul>
                 <li>Keywords: Will narrow down the search to articles that contain the keywords in the title or article.</li>
                 <li>Topic: You can select all topics, Entertainment, Sports, or Technology. Selecting all topics will return articles in any of the Entertainment, Sports, and Technology categories</li>
-                <li>Country: Filter articles from a certain country. Will return articles of all countries by default. Countries are listed in alphabetical order with the exception of the United States, which is listed first (because this website is based in the United States).</li>
-                <li>Sort By: Select how you want the articles to be sorted. By default, articles will be sorted by how close they are to the keywords</li></li>
+                <li>Country: Filter articles from a certain country that is supported by the NewsAPI. Will return articles of all countries by default. Countries are listed in alphabetical order with the exception of the United States, which is listed first (because this website is based in the United States).</li>
+                <li>Sort By: Select how you want the articles to be sorted. By default, articles will be sorted by how close they are to the keywords.</li></li>
             </ul>
         </p>
         <p>
